--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/src/draco/draco_encoder.js"></script>
+    <script src="/src/draco/draco_decoder.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
