--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/draco/draco_encoder.js"></script>
-    <script src="/draco/draco_decoder.js"></script>
+    <script src="https://cdn.shopify.com/s/files/1/0601/7060/0470/files/draco_encoder.js?v=1751580288"></script>
+    <script src="https://cdn.shopify.com/s/files/1/0601/7060/0470/files/draco_decoder.js?v=1751580288"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
