--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gltf-compressor.com/" />
     <meta property="og:title" content="glTF Compressor" />
+    <meta property="og:image" content="/share.jpg" />
     <meta
       property="og:description"
       content="Easily optimize glTF 3D models online. See your changes in realtime."
