Fix share image

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gltf-compressor.com/" />
-    <meta property="og:title" content="glTF Compressor" />
-    <meta property="og:image" content="/share.jpg" />
+    <meta
+      property="og:title"
+      content="glTF Compressor - Optimize your glTF files online"
+    />
+    <meta property="og:image" content="https://gltf-compressor.com/share.jpg" />
     <meta
       property="og:description"
       content="Easily optimize glTF 3D models online. See your changes in realtime."
