Only render shadows once on init instead of every frame.

--- a/index.html
+++ b/index.html
@@ -1,40 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>glTF Compressor</title>
 
-    <!-- Meta Description -->
-    <meta
-      name="description"
-      content="Easily optimize glTF 3D models online. See your changes in realtime."
-    />
-    <meta
-      name="keywords"
-      content="glTF, 3D models, compression, optimization, Draco, WebGL, 3D web, model compressor"
-    />
-    <meta name="author" content="Shopify" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>glTF Compressor</title>
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gltf-compressor.com/" />
-    <meta
-      property="og:title"
-      content="glTF Compressor - Optimize your glTF files online"
-    />
-    <meta property="og:image" content="https://gltf-compressor.com/share.jpg" />
-    <meta
-      property="og:description"
-      content="Easily optimize glTF 3D models online. See your changes in realtime."
-    />
-    <meta property="og:site_name" content="glTF Compressor" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="https://cdn.shopify.com/s/files/1/0601/7060/0470/files/draco_encoder.js?v=1751580288"></script>
-    <script src="https://cdn.shopify.com/s/files/1/0601/7060/0470/files/draco_decoder.js?v=1751580288"></script>
-    <script type="module" src="/src/main.tsx"></script>
-    <link rel="icon" type="image/png" href="/favicon.png" />
-  </body>
+  <!-- Meta Description -->
+  <meta name="description" content="Easily optimize glTF 3D models online. See your changes in realtime." />
+  <meta name="keywords" content="glTF, 3D models, compression, optimization, Draco, WebGL, 3D web, model compressor" />
+  <meta name="author" content="Shopify" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://gltf-compressor.com/" />
+  <meta property="og:title" content="glTF Compressor - Optimize your glTF files online" />
+  <meta property="og:image" content="https://gltf-compressor.com/share.jpg" />
+  <meta property="og:description" content="Easily optimize glTF 3D models online. See your changes in realtime." />
+  <meta property="og:site_name" content="glTF Compressor" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="https://cdn.shopify.com/s/files/1/0601/7060/0470/files/draco_encoder.js?v=1751580288"></script>
+  <script src="https://cdn.shopify.com/s/files/1/0601/7060/0470/files/draco_decoder.js?v=1751580288"></script>
+  <script type="module" src="/src/main.tsx"></script>
+  <link rel="icon" type="image/png" href="/favicon.png" />
+</body>
+
 </html>
